# EEE121-SP1-X9

./: ALIDO_OTERO_SP1.cpp  sample.cpp
Flashcards/: CMakeLists.txt  addflashcardsdialog.cpp  addflashcardsdialog.h  addflashcardsdialog.ui  datastructures.h  deleteflashcardsdialog.cpp  deleteflashcardsdialog.h  deleteflashcardsdialog.ui  editflashcardsdialog.cpp  editflashcardsdialog.h  editflashcardsdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  studymodedialog.cpp  studymodedialog.h  studymodedialog.ui
